--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,1 +1,9 @@
-<p style="font-size: 60%; text-align: right;">blog built using the <a href="https://github.com/jasonlong/cayman-theme">cayman-theme</a> by <a href="https://github.com/jasonlong">Jason Long</a>. <a href="http://creativecommons.org/licenses/by/4.0/">LICENSE</a></p>
+<div class="container">
+  <footer>
+    <p class="text-muted credit">
+      &copy; {{ site.time | date: '%Y' }} {{ site.name }} &middot;
+      <a href="https://github.com/arnp/herring-cove"> Herring Cove for Jekyll </a>
+      {{ site.time }}
+    </p>
+  </footer>
+</div>
