--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,12 +1,4 @@
-<script src="https://cdn.jsdelivr.net/clipboard.js/1.5.12/clipboard.min.js"></script>
-
-<script>
-var clipboard = new Clipboard('.share-btn');
-
-    clipboard.on('success', function(e) {
-        console.log(e);
-    });
-    clipboard.on('error', function(e) {
-        console.log(e);
-    });
-</script>
+<!-- Bootstrap core JavaScript-->
+<script src="{{ site.baseurl }}/js/jquery-1.10.2.min.js"></script>
+<script src="{{ site.baseurl }}/js/bootstrap.min.js"></script>
+<script src="{{ site.baseurl }}/js/hc.js"></script>
