--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,23 +1,19 @@
+---
+---
 <!DOCTYPE html>
 <html lang="en">
-
-  {% include head.html %}
-
-  <body>
-
+  <head>
     {% include header.html %}
-
-    <section class="main-content">
-      <div class="wrapper">
+  </head>
+  <body>
+    <div class="nav-toggle"><i class="fa fa-bars fa-2x"></i> Herring Cove </div>
+    <div id = "wrapper">
+      {%include navigation.html %}
+      <div class="container">
         {{ content }}
       </div>
+      {% include footer.html %}
     </div>
-
-    {% include footer.html %}
-
-
-  </body>
-
     {% include scripts.html %}
-
+  </body>
 </html>
