--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,17 +1,17 @@
 ---
 layout: default
 ---
-<article class="post" itemscope itemtype="http://schema.org/BlogPosting">
-
-    <div class="main-content" itemprop="articleBody">
-  <header class="post-header">
-    <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
-   <p class="post-meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>{% if page.author %} • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}</p>
-  </header>
-
+<div id="article">
+  <div class="article-title">{{ page.title }}</div>
+  <p class="meta">
+    <small>
+      &nbsp;<i class="fa fa-calendar-o"></i> {{ page.date | date_to_string}}
+    </small>
+  </p> <hr/>
+  <div class="post">
     {{ content }}
   </div>
-
-<a href="{{ site.url }}{{ site.baseurl }}"><h3 style="text-align: center;">- to blog -</h3></a>
-
-</article>
+</div>
+{% include share.html %}
+{% include pager.html %}
+{% include comment.html %}
