--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-{% include head.html %}
+{% include head2.html %}
 
 <body id="page-top">
   {% include nav.html %}
@@ -11,7 +11,7 @@
   {% include portfolio.html %}
   {% include aside.html %}
   {% include contact.html %}
-  {% include scripts.html %}
+  {% include scripts2.html %}
 </body>
 
 </html>
